using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace BridgeRace{
public class Constants
{
    //Anim Name
    public const string ANIM_IDLE = "idle";
    public const string ANIM_VICTORY = "victory";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_RUN = "run";


    //Tag
    public const string TAG_BRICK = "brick";
    public const string TAG_ENEMY = "enemy";
    public const string TAG_CHECKPOINT = "checkpoint";
    public const string TAG_PLAYER = "Player";
    public const string TAG_STAIR = "stair";
    public const string TAG_STARTPOINT = "startpoint";
    public const string TAG_WINPOINT = "winpoint";

    //Const
    public const float BRICK_HEIGHT = 0.3f;
}
}